# Schacksak

./: .gitignore  .ycm_extra_conf.py  Board.cpp  CMakeLists.txt  ChessComponent.cpp  ChessComponent.h  ChessWindow.cpp  ChessWindow.h  Color.h  Grid.cpp  Grid.h  Path.cpp  constants.h
Chess/: Board.h  CMakeLists.txt  Chess.cpp  ChessComponent.cpp  ChessComponent.h  ChessWindow.cpp  EventHandlers.h  Path.h  PieceType.h  constants.h
Chess/Pieces/: King.cpp  Piece.cpp
Pieces/: King.h  Piece.h
